Bug 330872: Make nsGenericDOMDataNode::AppendData send out proper notifications and add nsIContent::AppendText to allow appending text without sending out notifications. r/sr=bz